--- a/Progetto/Client/makefile
+++ b/Progetto/Client/makefile
@@ -1,4 +1,4 @@
 CC=gcc
 CFLAGS=-lncurses
 Client: 
-	$(CC) Client.c ClientGame.c ../scan_int/scan_int.c $(CFLAGS) -o Client.out
+	$(CC) Client.c ClientGame.c ../scan_int/scan_int.c intList/intList.c $(CFLAGS) -o Client.out
